--- a/report.tex
+++ b/report.tex
@@ -114,5 +114,8 @@ rw [one_eq_succ_zero]
 rfl
 \end{lstlisting}
 
+/subsection{Discord Question}
+
+I was wondering if the computers use of discrete math extends to all program computations or just math computations
 
 \end{document}
