--- a/report.tex
+++ b/report.tex
@@ -8,6 +8,8 @@
 \usepackage{graphicx}
 \usepackage[usenames]{color}
 \usepackage{hyperref}
+\usepackage{graphicx}
+
   \hypersetup{
     colorlinks = true,
     urlcolor = blue,       
@@ -203,8 +205,29 @@ I was wondering how discrete math and the recursive algorithms we talked about f
 
 Discord Name: Andrew Eppich.   
 In my literature review with ChatGPT, I explored interpreted vs. compiled programming languages. I found that interpreted languages are changed from user to machine code line by line, which is inefficient. Compiled languages are compiled from user to machine code all at once and then run which makes it faster and easier to spot errors. From there I explored interpreted languages and their role in machine learning as well as their history in machine learning. I first found that compiled was much more efficient than interpreted. I then found out that interpreted is mainly used for machine learning. It is mainly used because of the extensive amount of libraries used with interpreted languages, especially Python. Some of those libraries include NumPy, pandas, scikit-learn, TensorFlow, and Matplotlib. These libraries are crucial for machine learning because they are associated with data processing and deep learning. I then took a look into the history of programming languages with machine learning. I found that at first compiled languages were used from the 1950s-1980s. In 1991, Python was developed which became the standard for machine learning in the early 2000s. Python became the main language for machine learning from 2010 and on because of its libraries TensorFlow and PyTorch. 
-https://github.com/AndrewEppich/LLM-Literature-Review/blob/main/README.md
+\url{https://github.com/AndrewEppich/LLM-Literature-Review/blob/main/README.md}
 
-\subsection{}
+\subsection{Reports Voted For}
+
+\url{https://github.com/zackklopukh/LLMReport}
+
+\url{https://github.com/maxler0y/354_HW3}
+
+\section{Homework 4}\label{homework4}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.7\textwidth, page=1]{CPSC 354 Homework 4.pdf}
+  \label{fig:sample_pdf}
+\end{figure}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.7\textwidth, page=2]{CPSC 354 Homework 4.pdf}
+  \label{fig:sample_pdf}
+\end{figure}
+
+\subsection{Discord Question}
+
 
 \end{document}
