--- a/report.tex
+++ b/report.tex
@@ -217,13 +217,13 @@ In my literature review with ChatGPT, I explored interpreted vs. compiled progra
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.7\textwidth, page=1]{CPSC 354 Homework 4.pdf}
+  \includegraphics[width=0.7\textwidth, page=1]{CPSC_354_Homework_4.pdf}
   \label{fig:sample_pdf}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.7\textwidth, page=2]{CPSC 354 Homework 4.pdf}
+  \includegraphics[width=0.7\textwidth, page=2]{CPSC_354_Homework_4.pdf}
   \label{fig:sample_pdf}
 \end{figure}
 
