discord question added

--- a/report.tex
+++ b/report.tex
@@ -229,5 +229,7 @@ In my literature review with ChatGPT, I explored interpreted vs. compiled progra
 
 \subsection{Discord Question}
 
+How complex do parsing algorithms get the farther down the level of programming languages you go?
+
 
 \end{document}
