--- a/report.tex
+++ b/report.tex
@@ -297,6 +297,10 @@ How complex do parsing algorithms get the farther down the level of programming 
   exact ⟨h6, h5, h8, h9⟩
 \end{lstlisting}
 
+\subsubsection{Proof Explaination}
+I took the left and right sides and set them equal to different variables. Next I took those broken down parts and continued to break them down into different variables until I had a single value for a single variable. Then I added the desired variables together to acheive the desired equation
+
 \subsection{Discord Question}
+When thinking about the final Lean problem on the homework, I solved it by breaking up each term over and over again with and_left and and_right until there were single terms. It was like a tree forming a new branch and leaves every time the equation was broken up. My question is, how is the logic of AND and and_left and and_right used in programming languages and other applications? And is this just the logic that is used to parse a BST?
 
 \end{document}
