--- a/report.tex
+++ b/report.tex
@@ -379,6 +379,6 @@ exact fun r => < fun s => r, fun ns => r>
 
 \subsection{Discord Question}
 
-
+are lambda calculus proofs a part of the compiler? if so, how do they interact with the code that is being compiled?
 
 \end{document}
