--- a/report.tex
+++ b/report.tex
@@ -381,4 +381,50 @@ exact fun r => < fun s => r, fun ns => r>
 
 are lambda calculus proofs a part of the compiler? if so, how do they interact with the code that is being compiled?
 
+
+\section{Homework 7}\label{homework7}
+
+\subsection{Question 1}
+
+\textbf{Beta Reduction 1:}
+\[
+((\lambda m. \lambda n. m \, n) \, (\lambda f. \lambda x. f(f \, x))) \, (\lambda f. \lambda x. f(f(f \, x)))
+\]
+
+\textbf{Beta Reduction 2:}
+\[
+\lambda n. (\lambda f. \lambda x. f(f \, x)) \, n
+\]
+
+\textbf{Beta Reduction 3:}
+\[
+(\lambda f. \lambda x. f(f \, x)) \, (\lambda f. \lambda x. f(f(f \, x)))
+\]
+
+\textbf{Beta Reduction 4:}
+\[
+\lambda x. (\lambda f. \lambda x. f(f(f \, x))) \, (\lambda f. \lambda x. f(f(f \, x)) \, x)
+\]
+
+\textbf{Beta Reduction 5:}
+\[
+\lambda x. (\lambda x. f(f(f(f(f \, x))))) \, ((\lambda f. \lambda x. f(f(f \, x))) \, x)
+\]
+
+\textbf{Beta Reduction 6:}
+\[
+\lambda x. f(f(f(f(f(f \, x)))))
+\]
+
+\textbf{Beta Reduction 7:}
+\[
+\lambda x. f(f(f(f(f(f(f \, x))))))
+\]
+
+
+\subsection{Question 2}
+
+The function takes two Church numerals m and n and applies m to n. Applying m to n is like multiplying two numbers so it implements multiplication
+
+
 \end{document}
