--- a/report.tex
+++ b/report.tex
@@ -426,6 +426,8 @@ are lambda calculus proofs a part of the compiler? if so, how do they interact w
 
 The function takes two Church numerals m and n and applies m to n. Applying m to n is like multiplying two numbers so it implements multiplication
 
+\subsection{Discord Questions}
 
+how complex does lambda calculus recursion get in computer systems?
 
 \end{document}
