--- a/report.tex
+++ b/report.tex
@@ -515,4 +515,26 @@ Week 9: how often is tracing used in the debugger in industry
 
 week 10: what aspects if coding prompts substitutions to be made to evaluate it
 
+\section{Homework 11}\label{homework11}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth, page=1]{HW11.pdf}
+  \caption{Homework 11 - Page 1}
+  \label{fig:homework11_page1}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth, page=2]{HW11.pdf}
+  \caption{Homework 11 - Page 2}
+  \label{fig:homework11_page2}
+\end{figure}
+
+
+\subsection{Discord Question}
+
+
+
+
 \end{document}
