discord question added

--- a/report.tex
+++ b/report.tex
@@ -534,7 +534,7 @@ week 10: what aspects if coding prompts substitutions to be made to evaluate it
 
 \subsection{Discord Question}
 
-
+If an ARS is not terminating is that a similar situation to when code has an infinite loop
 
 
 \end{document}
