--- a/report.tex
+++ b/report.tex
@@ -587,7 +587,9 @@ If an ARS is not terminating is that a similar situation to when code has an inf
 * Normal forms are both a
 * Is the parity of as preserved in the equivalence class
 
+\subsection{Discord Question}
 
+what other uses do ARSs have besides sorting strings and how are they implemented 
 
 
 
