--- a/report.tex
+++ b/report.tex
@@ -592,6 +592,83 @@ If an ARS is not terminating is that a similar situation to when code has an inf
 what other uses do ARSs have besides sorting strings and how are they implemented 
 
 
+\section{Homework 13}\label{homework13}
+
+\[
+\text{let rec } \mathit{fact} = \lambda n. \text{ if } n = 0 \text{ then } 1 \text{ else } n \cdot \mathit{fact}(n-1) \text{ in } \mathit{fact}(3)
+\]
+\[
+\to \text{\textbf{<def of let rec>}} \quad \mathit{fact} = \mathit{fix} \, F, \text{ where } F = \lambda f. \lambda n. \text{if } n = 0 \text{ then } 1 \text{ else } n \cdot f(n-1)
+\]
+\[
+\to \mathit{fix} \, F \, 3 \quad \text{\textbf{<def of fix>}}
+\]
+\[
+\to F(\mathit{fix} \, F) \, 3 \quad \text{\textbf{<beta rule: substitute } F\text{>}}
+\]
+\[
+\to (\lambda f. \lambda n. \text{if } n = 0 \text{ then } 1 \text{ else } n \cdot f(n-1))(\mathit{fix} \, F) \, 3
+\]
+\[
+\to \lambda n. \text{if } n = 0 \text{ then } 1 \text{ else } n \cdot (\mathit{fix} \, F)(n-1) \quad \text{\textbf{<beta rule>}}
+\]
+\[
+\to \text{if } 3 = 0 \text{ then } 1 \text{ else } 3 \cdot (\mathit{fix} \, F)(3-1) \quad \text{\textbf{<beta rule: substitute } 3\text{>}}
+\]
+\[
+\to 3 \cdot (\mathit{fix} \, F)(2) \quad \text{\textbf{<def of if>}}
+\]
+\[
+\to 3 \cdot F(\mathit{fix} \, F)(2) \quad \text{\textbf{<def of fix>}}
+\]
+\[
+\to 3 \cdot (\lambda f. \lambda n. \text{if } n = 0 \text{ then } 1 \text{ else } n \cdot f(n-1))(\mathit{fix} \, F)(2) \quad \text{\textbf{<beta rule>}}
+\]
+\[
+\to 3 \cdot (\lambda n. \text{if } n = 0 \text{ then } 1 \text{ else } n \cdot (\mathit{fix} \, F)(n-1))(2) \quad \text{\textbf{<beta rule>}}
+\]
+\[
+\to 3 \cdot (\text{if } 2 = 0 \text{ then } 1 \text{ else } 2 \cdot (\mathit{fix} \, F)(2-1)) \quad \text{\textbf{<beta rule: substitute } 2\text{>}}
+\]
+\[
+\to 3 \cdot (2 \cdot (\mathit{fix} \, F)(1)) \quad \text{\textbf{<def of if>}}
+\]
+\[
+\to 3 \cdot (2 \cdot F(\mathit{fix} \, F)(1)) \quad \text{\textbf{<def of fix>}}
+\]
+\[
+\to 3 \cdot (2 \cdot (\lambda f. \lambda n. \text{if } n = 0 \text{ then } 1 \text{ else } n \cdot f(n-1))(\mathit{fix} \, F)(1)) \quad \text{\textbf{<beta rule>}}
+\]
+\[
+\to 3 \cdot (2 \cdot (\lambda n. \text{if } n = 0 \text{ then } 1 \text{ else } n \cdot (\mathit{fix} \, F)(n-1))(1)) \quad \text{\textbf{<beta rule>}}
+\]
+\[
+\to 3 \cdot (2 \cdot (\text{if } 1 = 0 \text{ then } 1 \text{ else } 1 \cdot (\mathit{fix} \, F)(1-1))) \quad \text{\textbf{<beta rule: substitute } 1\text{>}}
+\]
+\[
+\to 3 \cdot (2 \cdot (1 \cdot (\mathit{fix} \, F)(0))) \quad \text{\textbf{<def of if>}}
+\]
+\[
+\to 3 \cdot (2 \cdot (1 \cdot F(\mathit{fix} \, F)(0))) \quad \text{\textbf{<def of fix>}}
+\]
+\[
+\to 3 \cdot (2 \cdot (1 \cdot (\lambda f. \lambda n. \text{if } n = 0 \text{ then } 1 \text{ else } n \cdot f(n-1))(\mathit{fix} \, F)(0))) \quad \text{\textbf{<beta rule>}}
+\]
+\[
+\to 3 \cdot (2 \cdot (1 \cdot (\lambda n. \text{if } n = 0 \text{ then } 1 \text{ else } n \cdot (\mathit{fix} \, F)(n-1))(0))) \quad \text{\textbf{<beta rule>}}
+\]
+\[
+\to 3 \cdot (2 \cdot (1 \cdot (\text{if } 0 = 0 \text{ then } 1 \text{ else } 0 \cdot (\mathit{fix} \, F)(0-1)))) \quad \text{\textbf{<beta rule: substitute } 0\text{>}}
+\]
+\[
+\to 3 \cdot (2 \cdot (1 \cdot 1)) \quad \text{\textbf{<def of if>}}
+\]
+\[
+\to 3 \cdot (2 \cdot 1) = 3 \cdot 2 = 6 \quad \text{\textbf{<combine results>}}
+\]
+\[
+\text{Final Result: } \mathit{fact}(3) = 6
+\]
 
 
 
