--- a/report.tex
+++ b/report.tex
@@ -670,6 +670,9 @@ what other uses do ARSs have besides sorting strings and how are they implemente
 \text{Final Result: } \mathit{fact}(3) = 6
 \]
 
+\subsection{Discord Question}
+
+When using recursion in implementing a programming language, is big O notation just as important for optimizing it as it is for implementing data structures in programming for example
 
 
 \end{document}
